--- a/IOCPracticeDAL/IOCPracticeDAL.csproj
+++ b/IOCPracticeDAL/IOCPracticeDAL.csproj
@@ -76,6 +76,10 @@
       <Project>{76d1bb35-90eb-462f-82cd-3d1daf46c298}</Project>
       <Name>IOCPracticeCommon</Name>
     </ProjectReference>
+    <ProjectReference Include="..\IOCPracticeInterface\IOCPracticeInterface.csproj">
+      <Project>{02FFC3A4-C873-4ED0-9F20-819C27ED4C76}</Project>
+      <Name>IOCPracticeInterface</Name>
+    </ProjectReference>
     <ProjectReference Include="..\IOCPracticeModel\IOCPracticeModel.csproj">
       <Project>{CAB75C90-E2FC-4EC2-B88C-00B33EF09D71}</Project>
       <Name>IOCPracticeModel</Name>
