--- a/IOCPractice/IOCPractice.csproj
+++ b/IOCPractice/IOCPractice.csproj
@@ -100,6 +100,10 @@
       <Name>IOCPracticeModel</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="WorkScript\Advanced7第七次homework.txt" />
+    <Content Include="WorkScript\company_user_menu_mapping.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
