--- a/IOCPracticeInterface/IOCPracticeInterface.csproj
+++ b/IOCPracticeInterface/IOCPracticeInterface.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IDAL\IRetrunDataEngine.cs" />
     <Compile Include="IDAL\IUserDataEngine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
